--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
+  "homepage": "https://sumannkumari03.github.io/portfolio",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
